syntax = "proto3";
option java_multiple_files = true;
package hu.icellmobilsoft.sampler.common.grpc.error;

message RequestForError {
    string requestId = 1;
    string requestedExceptionClass = 2;
    string exceptionMessage = 3;
}

message ResponseForError {
    string requestId = 1;
}

service ErrorService {
    rpc error(RequestForError) returns (ResponseForError);
}